# GALILEO-V2.0

./: .env.example  .gitignore  ALL_34_FILES_COMPLETE_INVENTORY.md  COMMIT_EDITMSG  COMPLETE_FILE_TREE.txt  CONSOLIDATION_SUMMARY.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DOWNLOAD_THIS.md  Dockerfile  Dockerfile.celery  ENDPOINT_STATUS_REPORT.md  FILE_INDEX.md  HEAD  INDEX.md  INTEGRATION_STATUS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  README_FIRST.md  SESSIONS_5_6_COMPLETE.md  SESSION_10_COMPLETION_SUMMARY.md  SESSION_10_OVERVIEW.md  SESSION_10_PROJECT_STATUS.md  SESSION_11_DOWNLOAD_SETUP_GUIDE.md  SESSION_11_FILE_INDEX.md  SESSION_11_SUMMARY.md  SESSION_11_requirements.txt  SESSION_13_REPORT.md  SESSION_14_SUMMARY.md  SESSION_1_COMPLETE.md  SESSION_1_DELIVERABLES.md  SESSION_1_QUICK_START.md  SESSION_1_README.md  SESSION_1_STATUS.md  SESSION_1_SUMMARY.md  SESSION_2_COMPLETE.md  SESSION_2_DELIVERY.md  SESSION_2_FINAL.md  (+35 more)
.github/workflows/: benchmark.yml
GALILEO Session 10/: DELIVERABLES_INVENTORY.md  FILE_LISTING.txt  QUICK_REFERENCE.md  README.md  __init__.py  background_removal_benchmarks.py  crustal_models.py  earth_models.md  getting_started.py  gravity_fields.py  hydrology.py  masking.py  test_geophysics.py
GALILEO Session 11/: README.md  bench.py  benchmark.yml  datasets.py  example_usage.py  metrics.py  quickstart.py  setup.py  test_bench.py
GALILEO Session 12/: README.md  SUMMARY.md  baseline_study.py  optical_study.py  orbit_study.py  pareto_analysis.py  run_trades.py  trade_stats.json  trade_studies.md
GALILEO Session 13/: ETHICS.md  LEGAL.md  README.md  SUMMARY.md  __init__.py  requirements.txt  security_compliance.md  security_scan.py  test_compliance.py
GALILEO Session 14/: QUICKSTART.md  README.md  __init__.py  dashboard.html  dashboard_server.py  demo_basic.py  demo_streaming.py  emulation.md  optical_bench.py  requirements.txt
GALILEO Session 5&6/: COMPLETION_VISUAL.txt  inversion_engine.md  solvers.py  train.py  unet.py
GALILEO Session 9/: INDEX.md  QUICKSTART.md  README.md  SESSION_9_SUMMARY.txt  cal_maneuvers.py  calibration.md  calibration.py  demo_calibration.py  validate_calibration.py
GALILEO Session4/: README.md  generate_examples.py  requirements.txt
GALILEO V2.0/: COMPLETE_FILE_MANIFEST.md
GALILEO V2.0 Session I.0 Updated/: COMPLETE_DOWNLOAD_GUIDE.md  DOWNLOAD_SESSION_1.md  MASTER_FILE_LISTING.md  QUICK_DOWNLOAD_INDEX.md  docker-compose.yml  physics_model.md  pyproject.toml
GALILEO V2.0 Session1.0/: LEGAL.md  QUICKSTART.md  SESSION_1_DELIVERY.md  ci.yml  dynamics.py  requirements.txt  test_session1_physics.py
GALILEO V2.0 Session1.0/mnt/user-data/outputs/geosense-platform/control/attitude/: Cargo.toml
GALILEO V2.0 Session1.0/mnt/user-data/outputs/geosense-platform/control/dynamics/: Cargo.toml
GALILEO V2.0 Session1.0/mnt/user-data/outputs/geosense-platform/control/dynamics/src/: lib.rs
GALILEO V2.0 Session1.0/mnt/user-data/outputs/geosense-platform/control/power/: Cargo.toml
GALILEO V2.0 Session1.0/mnt/user-data/outputs/geosense-platform/control/power/src/: lib.rs
GALILEO_Session_4_Synthetic_Data/: synthetic.py  synthetic_data.md  test_synthetic.py
GALILEO_Session_5_6_Inversion_and_ML/: QUICK_REFERENCE.md  README.md  __init__.py  test_ml.py
GALILEO_Session_7_8_Backend_and_UI/: FILE_LISTING.md  README.md  docker-compose.yml
Session 7 and 8/: DOWNLOAD_GUIDE.md
alembic/: README  env.py
api/: __init__.py  auth.py  main.py  main_backup.py  main_integrated.py
api/services/: __init__.py  calibration_service.py  compliance_service.py  control_service.py  database_service.py  emulator_service.py  inversion_service.py  ml_service.py  simulation_service.py  task_service.py  trade_study_service.py  workflow_service.py
api/static/: dashboard.html
bench/: __init__.py
bench/datasets/: boundary_test.npy  depth_test.pkl  inversion_test.pkl  localization_test.npy  ml_test_input.pkl  multi_target_test.npy  overlapping_anomalies.npy  point_source.npy  standard_model.pkl  twin_anomalies.npy
bench/gold_outputs/: boundaries.pkl  centroids.npy  depths.npy  multi_targets.npy  psf.npy  separated_anomalies.npy  twin_anomalies.npy
bench/reports/: benchmark_report_20251105_103131.json  benchmark_report_20251105_103212.json  benchmark_report_20251105_103235.json  benchmark_report_20251105_103552.json
compliance/: ETHICS.md  audit.py  authorization.py  retention.py  secrets.py
control/: __init__.py
control/controllers/: __init__.py  collision_avoidance.py  lqg.py  lqr.py  mpc.py  mpc_ml.py  safety_ml.py  station_keeping.py
control/navigation/: __init__.py  ekf.py
docs/: backend_ops.md  ml_models.md  ui.md  verification.md
docs/figures/: README.md
emulator/: demo_events.py  server.py  start_emulator.py
examples/: README.md  complete_demo.py  complete_geophysics_example.py  session1_demo.py  session2_complete_demo.py  session2_demo.py  session3_demo.py
geophysics/: joint_inversion.py
inversion/: __init__.py  regularizers.py
ml/: __init__.py  inference.py  models.py  pinn.py  reinforcement.py  training.py
mnt/user-data/outputs/geosense-platform/: Cargo.toml  SESSION_0_STATUS.md
mnt/user-data/outputs/geosense-platform/control/attitude/src/: lib.rs
mnt/user-data/outputs/geosense-platform/inversion/: algorithms.py
mnt/user-data/outputs/geosense-platform/sim/: gravity.py
mnt/user-data/outputs/geosense-platform/ui/: package.json
mnt/user-data/outputs/geosense-platform/ui/src/components/: GlobeViewer.tsx
monitoring/: prometheus.yml
ops/: Dockerfile  __init__.py  main.py  middleware.py  minio_client.py  models.py  requirements.txt  schemas.py  tasks.py  test_integration.py  worker.py
ops/db/: init.sql
scripts/: init-database.py  init-db.sql  noise_budget_analysis.py
sensing/: __init__.py  model.py
sim/: __init__.py  system_id.py
sim/dynamics/: __init__.py  (+4 more)
tests/: test_inversion.py
trades/: __init__.py
ui/: .env.local.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  setup-cesium.sh  tailwind.config.js
(+25 files in other folders)
