[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosense-platform"
version = "0.3.0"
description = "Space-based geophysical sensing platform for measuring Earth's gravitational field variations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary - Research Use Only"}
authors = [
    {name = "GeoSense Team"}
]

dependencies = [
    "jax[cpu]==0.4.20",
    "jaxlib==0.4.20",
    "numpy>=1.24.0,<2.0.0",
    "scipy==1.11.0",
    "pandas==2.0.0",
    "xarray==2023.1.0",
    "h5py==3.9.0",
    "netCDF4==1.6.4",
    "matplotlib==3.7.0",
    "seaborn==0.12.0",
    "pyyaml==6.0",
    "pydantic==2.0.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "mypy==1.5.0",
    "ruff==0.1.0",
    "black==23.7.0",
    "isort==5.12.0",
]

ml = [
    "torch==2.0.0",
    "flax==0.7.0",
]

control = [
    "cvxpy>=1.3.0",  # Required for Model Predictive Control (MPC)
]

[tool.setuptools.packages.find]
include = ["sim*", "sensing*", "inversion*", "control*", "ml*", "ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
