[project]
name = "geosense-platform"
version = "0.1.0"
description = "Space-based geophysical sensing and mapping platform for Earth mass distribution analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary - Research Use Only"}
authors = [
    {name = "GeoSense Team", email = "team@geosense.example"}
]
keywords = ["geophysics", "gravimetry", "satellite", "earth-observation", "mass-distribution"]

dependencies = [
    "jax[cpu]>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "xarray>=2023.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "cartopy>=0.22.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

ml = [
    "torch>=2.0.0",
    "flax>=0.7.0",
    "optax>=0.1.7",
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sim*", "sensing*", "inversion*", "ml*", "ops*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=sim",
    "--cov=sensing",
    "--cov=inversion",
    "--cov=ml",
    "--cov=ops",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "scipy.*",
    "cartopy.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
