[package]
name = "geosense-dynamics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
ndarray.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "orbit_propagation"
harness = false
